--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
     <title>Calendar</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </head>
+
 <body>
     <section class="month" id="november">
-        
+
     </section>
+    <div class="IE">
+        <div class="info">
+            Вы используете Internet Explorer. Пожалуйста, обратитесь к врачу.
+        </div>
+    </div>
+
+    <script src="Detect.js/detect.js"></script>
+    <script src="src/daysGeneration"></script>
+    <script src="src/getDays.js"></script>
 </body>
+
 </html>
