--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
 
 <body>
     <section class="month" id="november">
-
     </section>
     <div class="IE">
-        <div class="info">
-            Вы используете Internet Explorer. Пожалуйста, обратитесь к врачу.
-        </div>
     </div>
 
-    <script src="Detect.js/detect.js"></script>
-    <script src="src/daysGeneration"></script>
     <script src="src/getDays.js"></script>
+    <script src="src/setMonthTittle.js"></script>
+    <script src="src/daysGeneration.js"></script>
 </body>
 
 </html>
