--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 <body>
     <section class="month" id="november">
     </section>
-    <div class="IE">
-    </div>
 
     <script src="src/getDays.js"></script>
     <script src="src/setMonthTittle.js"></script>
     <script src="src/daysGeneration.js"></script>
+    <script src="src/eventDay.js"></script>
 </body>
 
 </html>
