--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
 </head>
 
 <body>
+    <div id="names-of-days">
+        <ul id="monsun">
+            <li>Mon</li>
+            <li>Tue</li>
+            <li>Wed</li>
+            <li>Thu</li>
+            <li>Fri</li>
+            <li>Sat</li>
+            <li>Sun</li>
+        </ul>
+    </div>
+
     <section class="month" id="november">
+        
     </section>
 
     <script src="src/getDays.js"></script>
     <script src="src/setMonthTittle.js"></script>
     <script src="src/daysGeneration.js"></script>
-    <script src="src/eventDay.js"></script>
+    <script src="src/createModal.js"></script>
+
 </body>
 
 </html>
