--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Calendar</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 
 <body>
@@ -29,15 +28,18 @@
     </div>
 
 
-    <section class="month" id="november" data-ele = burger>
-        
-    </section>
+    <section class="month" id="november" data-ele = burger></section>
+    <section class="left-info-block" id="infoBlock"></section>
+    <audio id="sound" src="audio.mp3" autoplay="autoplay"></audio>
+
+    <!--<script src="dist/bundle.js"></script>-->
 
     <script src="src/prevNextEvents.js"></script>
     <script src="src/setMonthTittle.js"></script>
     <script src="src/daysGeneration.js"></script>
+    <script src="src/todo.js"></script>
     <script src="src/createModal.js"></script>
-    <script src="src/createTooltip.js"></script>
+    
 </body>
 
 </html>
